Fixed password label alignment (#81)

--- a/modules/user/public/assets/style/pos-user-form.css
+++ b/modules/user/public/assets/style/pos-user-form.css
@@ -47,6 +47,12 @@
   color: var(--pos-color-content-foreground-supplementary);
 }
 
+.pos-form-simple fieldset:has(.pos-user-label-password) {
+  display: flex;
+  flex-direction: column;
+      gap: .2em;
+}
+
 .pos-user-social-login-separator {
   margin: 20px 0px;
   text-align: center;
